--- a/index.html
+++ b/index.html
@@ -1,71 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Emerson | Linktree</title>
-    <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/43749971" type="image/x-icon" />
-    <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <!-- Core theme CSS -->
-    <link rel="stylesheet" href="style.css">
-  </head>
+<html lang="pt_br">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>DALMAT | Linktree</title>
+        <!-- Favicon -->
+        <link rel="icon" href="logo.jfif" type="image/x-icon" />
+        <!-- Core theme CSS -->
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-  <body>
-    <!-- Parallax Pixel Background Animation -->
-    <section class="animated-background">
-      <div id="stars1"></div>
-      <div id="stars2"></div>
-      <div id="stars3"></div>
-    </section>
-    <!-- End of Parallax Pixel Background Animation -->
+    <body>
+        <!-- Parallax Pixel Background Animation -->
+        <section class="animated-background">
+            <div id="stars1"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+        </section>
+        <!-- End of Parallax Pixel Background Animation -->
 
-    <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
-    </a>
+        <a id="profilePicture" href="#popup">
+            <img src="logo.jfif" alt="Profile Picture" />
+        </a>
 
-    <div class="overlay" id="popup">
-      <div class="popup">
-        <div class="popup-photo">
-          <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
-            <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
-          </a>
+        <div class="overlay" id="popup">
+            <div class="popup">
+                <div class="popup-photo">
+                    <a href="logo.jfif" target="_blank">
+                        <img src="logo.jfif" alt="Profile Picture" />
+                    </a>
+                </div>
+                <div class="popup-quote">
+                    'Sucesso é o acúmulo de pequenos esforços, repetidos dia e
+                    noite.' - Robert Collier
+                </div>
+                <a class="popup-close" onclick="history.back()">&times;</a>
+            </div>
         </div>
-        <div class="popup-quote">
-          But... the sensation that I've lost something lingers for a longtime after I wake up.
+
+        <div id="userName">
+            "Sucesso é o acúmulo de pequenos esforços, repetidos dia e
+            noite."<br />
+            Robert Collier
         </div>
-        <a class="popup-close" onclick="history.back()">&times;</a>
-      </div>
-    </div>
 
-    <div id="userName">
-      @johnggli
-    </div>
+        <div id="links">
+            <a class="link" href="" target="_blank"
+                >FIS216 - Mecânica e Gravitação</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT215 - Cálculo Numérico</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT220 - Introdução à Matemática</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT223 - Cálculo Diferencial e Integral I</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT224 - Cálculo Diferencial e Integral II</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT225 - Cálculo Diferencial e Integral III</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT226 - Cálculo Diferencial e Integral IV</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT227 - Álgebra Vetorial e Geometria Analítica</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT228 - Álgebra Linear I</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT230 - Variáveis Complexas</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT232 - Fundamentos de Matemática I</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT233 - Fundamentos de Matemática II</a
+            >
+            <a class="link" href="" target="_blank"
+                >MAT234 - Fundamentos de Matemática III</a
+            >
+            <a class="link" href="" target="_blank">MAT237 - Álgebra I</a>
+            <a class="link" href="" target="_blank">MAT238 - Álgebra II</a>
+            <a class="link" href="" target="_blank">MAT240 - Análise Real</a>
+        </div>
 
-    <div id="links">
-      <a class="link" href="https://github.com/johnggli" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
-      </a>
-      <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
-      </a>
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a>
-      <a class="link" href="https://www.instagram.com/johnggli" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a>
-      <a class="link" href="https://twitter.com/johnggli" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://myanimelist.net/profile/johnggli" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
-      </a>
-    </div>
-
-    <div id="hashtag">
-      #BeHappy❤
-    </div>
-  </body>
+        <div id="hashtag">Bons Estudos ❤</div>
+    </body>
 </html>
